--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <title>Caffeinated Insomniacs</title>
 </head>
-<body>
-  <div class="content" style="display: flex; align-items: center; justify-content: center; font-family: Arial, sans-serif">
+<body style="height: 100%; margin: 0">
+  <div class="content" style="height: 100%; display: flex; align-items: center; justify-content: center; font-family: Arial, sans-serif">
     <h1>Coffee.</h1>
   </div>
 </body>
