--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
-<head>
-  <title>Caffeinated Insomniacs</title>
-</head>
-<body style="height: 100%; margin: 0">
-  <div class="content" style="height: 100%; display: flex; align-items: center; justify-content: center; font-family: Arial, sans-serif">
-    <h1>Coffee.</h1>
-  </div>
-</body>
+  <head>
+    <title>Caffeinated Insomniacs</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/styles.css">
+  </head>
+  <body>
+    <div class="content">
+      <h1><a href="https://github.com/caffeinatedinsomniacs" target="_blank">Caffeinated Insomniacs</a></h1>
+      <h2>☕️</h2>
+      <h3>We're a team of five high school students building some cool stuff.</h3>
+      <!-- Yes, that's really all for now! -->
+    </div>
+  </body>
 </html>
