--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <title>Caffeinated Insomniacs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Caffeinated Insomniacs"/>
+    <meta property="og:site_name" content="Insomniacs.me"/>
+    <meta property="og:description" content="A team of five high school students building neat things."/>
+    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/19213625"/>
+    <meta property="og:url" content="https://insomniacs.me"/>
   </head>
   <body>
     <div class="content">
