--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Caffeinated Insomniacs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="/img/favicon.png">
     <!-- Open Graph -->
     <meta property="og:title" content="Caffeinated Insomniacs"/>
     <meta property="og:site_name" content="Insomniacs.me"/>
