--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Caffeinated Insomniacs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css?v2">
     <link rel="shortcut icon" href="/img/favicon.png">
     <!-- Open Graph -->
     <meta property="og:title" content="Caffeinated Insomniacs"/>
