--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Caffeinated Insomniacs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/animate.css">
     <link rel="stylesheet" href="/css/styles.css?v3">
     <link rel="shortcut icon" href="/img/favicon.png">
     <!-- Open Graph -->
@@ -13,9 +14,9 @@
   </head>
   <body>
     <div class="content">
-      <h1><a href="https://github.com/caffeinatedinsomniacs" target="_blank">Caffeinated Insomniacs</a></h1>
-      <h2><a class="coffee" href="https://academus.io">☕️</a></h2>
-      <h3>We're a team of five high school students building some cool stuff.</h3>
+      <h1 class="animated fadeIn" style="animation-delay: 1.5s"><a href="https://github.com/caffeinatedinsomniacs" target="_blank">Caffeinated Insomniacs</a></h1>
+      <h2 class="animated fadeInUp"><a class="coffee" href="https://academus.io">☕️</a></h2>
+      <h3 class="animated fadeIn" style="animation-delay: 1.5s">We're a team of five high school students building some cool stuff.</h3>
       <!-- Yes, that's really all for now! -->
     </div>
   </body>
