--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:description" content="A team of five high school students building neat things."/>
     <meta property="og:image" content="https://avatars0.githubusercontent.com/u/19213625"/>
     <meta property="og:url" content="https://insomniacs.me"/>
+    <!-- G Suite -->
+    <meta name="google-site-verification" content="UbDRRwPB6DilCBdntCIPnIlpqQIu_LxuaHGLRZo8Kic" />
   </head>
   <body>
     <div class="content">
